--- a/myonlineShop-seq-pos/views/index.pug
+++ b/myonlineShop-seq-pos/views/index.pug
@@ -1,12 +1,6 @@
 extends base.pug
 block meta
-    <meta name="theme-color" content="#2962ff">
-    <meta name="msapplication-navbutton-color" content="#2962ff">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#2962ff">
-    
-    <link rel="stylesheet" href="./theme-assets/css/dependencies.css">
-    <link rel="stylesheet" href="./theme-assets/css/theme.css">
-    <link rel="stylesheet" href="./theme-assets/css/custom.css">
+block link
 block title
     title Home
 
@@ -1197,21 +1191,5 @@ block title
                     <button data-remodal-action="cancel" class="btn btn-sm btn-outline-light px-3 me-2">بستن</button>
                     <a href="#" class="btn btn-sm btn-primary px-3">دیدن محصول</a>
                 </div>
-            block script 
-                <script src="./theme-assets/js/dependencies/jquery-3.6.0.min.js"></script>
-                <script src="./theme-assets/js/dependencies/bootstrap.bundle.min.js"></script>
-                <script src="./theme-assets/js/dependencies/bootstrap-slider.min.js"></script>
-                <script src="./theme-assets/js/dependencies/jquery.countdown.min.js"></script>
-                <script src="./theme-assets/js/dependencies/jquery.simple.timer.min.js"></script>
-                <script src="./theme-assets/js/dependencies/iziToast.min.js"></script>
-                <script src="./theme-assets/js/dependencies/fancybox.umd.js"></script>
-                <script src="./theme-assets/js/dependencies/nouislider.min.js"></script>
-                <script src="./theme-assets/js/dependencies/wNumb.js"></script>
-                <script src="./theme-assets/js/dependencies/remodal.min.js"></script>
-                <script src="./theme-assets/js/dependencies/select2.min.js"></script>
-                <script src="./theme-assets/js/dependencies/simplebar.min.js"></script>
-                <script src="./theme-assets/js/dependencies/swiper-bundle.min.js"></script>
-                <script src="./theme-assets/js/dependencies/zoomsl.min.js"></script>
-                <script src="./theme-assets/js/theme.js"></script>
-                <script src="./theme-assets/js/custom.js"></script>
-            
+block script 
+                
