--- a/myonlineShop-seq-pos/views/base.pug
+++ b/myonlineShop-seq-pos/views/base.pug
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 html(lang="fa")
-
     head
+        block meta
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        block meta
+        <meta name="theme-color" content="#2962ff">
+        <meta name="msapplication-navbutton-color" content="#2962ff">
+        <meta name="apple-mobile-web-app-status-bar-style" content="#2962ff">
+        block link
+        <link rel="stylesheet" href="./theme-assets/css/dependencies.css">
+        <link rel="stylesheet" href="./theme-assets/css/theme.css">
+        <link rel="stylesheet" href="./theme-assets/css/custom.css">
+            
         block title
 
     body
@@ -180,7 +187,8 @@ html(lang="fa")
                                     <div class="mini-cart">
                                         <div class="mini-cart-header">
                                             <span class="mini-cart-products-count fa-num">4 کالا</span>
-                                            <a href="cart.html" class="btn btn-link px-0">مشاهده سبد خرید <i class="ri-arrow-left-s-fill"></i></a>
+                                            <a href="cart.html" class="btn btn-link px-0">مشاهده سبد خرید 
+                                                <i class="ri-arrow-left-s-fill"></i></a>
                                         </div>
                                         <div class="mini-cart-products do-simplebar">
                                             <div class="mini-cart-product">
@@ -685,3 +693,20 @@ html(lang="fa")
             </footer>
         </div>
         block script 
+        <script src="./theme-assets/js/dependencies/jquery-3.6.0.min.js"></script>
+        <script src="./theme-assets/js/dependencies/bootstrap.bundle.min.js"></script>
+        <script src="./theme-assets/js/dependencies/bootstrap-slider.min.js"></script>
+        <script src="./theme-assets/js/dependencies/jquery.countdown.min.js"></script>
+        <script src="./theme-assets/js/dependencies/jquery.simple.timer.min.js"></script>
+        <script src="./theme-assets/js/dependencies/iziToast.min.js"></script>
+        <script src="./theme-assets/js/dependencies/fancybox.umd.js"></script>
+        <script src="./theme-assets/js/dependencies/nouislider.min.js"></script>
+        <script src="./theme-assets/js/dependencies/wNumb.js"></script>
+        <script src="./theme-assets/js/dependencies/remodal.min.js"></script>
+        <script src="./theme-assets/js/dependencies/select2.min.js"></script>
+        <script src="./theme-assets/js/dependencies/simplebar.min.js"></script>
+        <script src="./theme-assets/js/dependencies/swiper-bundle.min.js"></script>
+        <script src="./theme-assets/js/dependencies/zoomsl.min.js"></script>
+        <script src="./theme-assets/js/theme.js"></script>
+        <script src="./theme-assets/js/custom.js"></script>
+            
